smartquailpga/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "pgadmin.dev.smartquail.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: pgadmin-service
              port:
                number: 80
